--- a/src/main/resources/templates/eServices2/FuncGroup/delete-func-group-result.html
+++ b/src/main/resources/templates/eServices2/FuncGroup/delete-func-group-result.html
@@ -5,22 +5,20 @@
     <title>e-Services Admin Function</title>
 
     <link rel="stylesheet" href="/adminfunc/css/func-group.css"/>
+    <script th:inline="javascript" type="text/javascript"  >
+    /*<![CDATA[*/
 
-    <!--<script th:inline="javascript" th:if="${scheduleJobDetailDTO}">-->
-    <!--/*<![CDATA[*/-->
+    $(document).ready(function () {
+        var submitBtnDom = jQuery('#submitBtn');
+        submitBtnDom.on('click', function (e) {
+            $('#grpId').val(document.getElementById('groupId').innerText);
+            var form = e.target.form;
+            form.submit();
+        });
+    });
 
-    <!--$(document).ready(function () {-->
-    <!--// var jobList = [];-->
-    <!--// var statusList = [];-->
-
-    <!--var scheduleJobDetailDTO = [[${scheduleJobDetailDTO}]];-->
-    <!--console.log('scheduleJobDetailDTO');-->
-    <!--console.log(scheduleJobDetailDTO);-->
-    <!---->
-    <!--});-->
-
-    <!--/*]]>*/-->
-    <!--</script>-->
+    /*]]>*/
+    </script>
 
 </head>
 <body>
@@ -31,7 +29,7 @@
     <div layout:fragment="content">
         <div class="content-padding">
             <div>
-                <!--<h1>createFuncGroup</h1>-->
+                <form id="submitForm" th:action="@{/e-Services-2/management/deleteFunctionGroup_Success.do}" method="post">
 
                 <div>
                     <div class="flex-container ">
@@ -46,7 +44,8 @@
                                 <b><span th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.funcGroupId')}"></span></b>
                             </div>
                             <div class="flex-item-7">
-                                <span>ABC</span>
+                                <span th:text="${functionGroupCreateDTO.grpId}" id ="groupId" ></span>
+                                <input type ="hidden" name ="grpId" id ="grpId" />
                             </div>
                         </div>
                         <div class="func-tab-padding-left func-tab-padding-right"><div class="RowSeparatorThin"></div></div>
@@ -55,7 +54,7 @@
                                 <b><span th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.description')}"></span></b>
                             </div>
                             <div class="flex-item-7">
-                                <span>Testing Group ID</span>
+                                <span th:text="${functionGroupCreateDTO.groupDesc}"></span>
                             </div>
                         </div>
                     </div>
@@ -72,22 +71,21 @@
                         <div class="flex-container">
                             <div class="flex-item-3 func-tab-padding-left" style="padding-top: 20px;">
                                 <b><span th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.currFunc')}"></span></b>
+                                <input type ="hidden" name ="currentFunc" id ="currentFunc" />
                             </div>
-                            <div class="flex-item-7">
-                                <div style="padding-top: 20px;"><span>Enquiry Code Information (ABC) </span></div>
-                                <div style="padding-top: 20px;"></div>
-                                <div><span>Enquiry Code Information (ECE0001)</span></div>
-                                <div><span>Marriage Quota Transfer (MQM0001)</span></div>
+                            <div class="flex-item-7" id ="currFunc">
+                                <div th:each="func  : ${currentFunc}" >
+                                    <div th:text="${func.funcId + '(' + func.funcDesc + ')'}" ></div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <div style="padding-top: 20px;">
-                    <a th:href="@{/e-Services-2/management/deleteFunctionGroup_Success.do}">
-                        <input class="SmallButtonStyle pointer" style="min-width: 80px;" type="button" th:value="${#messages.msg('umps.adminfunc.common.confirm')}" />
-                    </a>
+                        <input class="SmallButtonStyle pointer" style="min-width: 80px;" id = "submitBtn" type="button" th:value="${#messages.msg('umps.adminfunc.common.confirm')}" />
                 </div>
+                </form>
 
             </div>
         </div>
