--- a/src/main/resources/templates/eServices2/FuncGroup/update-func-group-edit-success.html
+++ b/src/main/resources/templates/eServices2/FuncGroup/update-func-group-edit-success.html
@@ -6,22 +6,6 @@
 
     <link rel="stylesheet" href="/adminfunc/css/func-group.css"/>
 
-    <!--<script th:inline="javascript" th:if="${scheduleJobDetailDTO}">-->
-    <!--/*<![CDATA[*/-->
-
-    <!--$(document).ready(function () {-->
-    <!--// var jobList = [];-->
-    <!--// var statusList = [];-->
-
-    <!--var scheduleJobDetailDTO = [[${scheduleJobDetailDTO}]];-->
-    <!--console.log('scheduleJobDetailDTO');-->
-    <!--console.log(scheduleJobDetailDTO);-->
-    <!---->
-    <!--});-->
-
-    <!--/*]]>*/-->
-    <!--</script>-->
-
 </head>
 <body>
 <div>
@@ -46,7 +30,7 @@
                                 <b><span th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.funcGroupId')}"></span></b>
                             </div>
                             <div class="flex-item-7">
-                                <span>ABC</span>
+                                <span th:text="${functionGroupCreateDTO.grpId}"></span>
                             </div>
                         </div>
                         <div class="func-tab-padding-left func-tab-padding-right"><div class="RowSeparatorThin"></div></div>
@@ -55,7 +39,7 @@
                                 <b><span th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.description')}"></span></b>
                             </div>
                             <div class="flex-item-7">
-                                <span>Testing Group ID</span>
+                                <span th:text="${functionGroupCreateDTO.groupDesc}"></span>
                             </div>
                         </div>
                     </div>
@@ -74,43 +58,32 @@
                                 <b><span th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.currFunc')}"></span></b>
                             </div>
                             <div class="flex-item-7">
-                                <div style="padding-top: 20px;"><span>User Maintenance (ADM0001) </span></div>
-                                <div style="padding-top: 20px;"></div>
-                                <div><span>Enquiry Code Information (ECE0001) </span></div>
-                                <div><span>Marriage Quota Transfer (MQM0001) </span></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div style="padding-top: 30px;">
-                    <div class="flex-container ">
-                        <div class="flex-item-auto func-tab" >
-                            <span class="func-tab-title" th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.user')}"></span>
-                        </div>
-                        <div class="flex-item-1"></div>
-                    </div>
-                    <div class="func-border-frame">
-                        <div class="flex-container">
-                            <div class="flex-item-3 func-tab-padding-left" style="padding-top: 20px;">
-                                <b><span th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.userAssigned')}"></span></b>
-                            </div>
-                            <div class="flex-item-7">
-                                <div style="padding-top: 20px;"><span>A0001 </span></div>
-                                <div style="padding-top: 20px;"></div>
-                                <div><span>A0003 </span></div>
-                                <div><span>A0004 </span></div>
+                                <div th:each="func  : ${currentFunc}">
+                                    <!--th:text="${bean.field + '!' + bean.field}">-->
+                                    <div th:text="${func.funcId + '(' + func.funcDesc + ')'}"></div>
+                                    <!--<div th:text="${func.funcDesc}"></div>-->
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <div style="padding-top: 20px;">
-                    <span th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.updateSuccess')}"></span>
+                    <span th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.createSuccess')}"></span>
                 </div>
 
                 <div style="padding-top: 20px;">
                     <input class="SmallButtonStyle pointer" style="min-width: 80px;" type="button" th:value="${#messages.msg('umps.adminfunc.common.print')}" />
+                </div>
+
+                <div class="flex-container">
+                    <div style="flex: auto;"></div>
+                    <div style="padding: 15px;">
+                        <a class="DisableLinkUnderline" th:href="@{/e-Services-2/management//updateFunctionGroup.do}">
+                            <input class="ButtonStyle back-button pointer" type="button" th:value="${#messages.msg('umps.adminfunc.func.eservices2.management.updatefuncgroup')}" />
+                        </a>
+                    </div>
+
                 </div>
 
             </div>
