Added Back button for Function Group page. Delete Functions include rolegroup and group.

--- a/src/main/resources/templates/eServices2/FuncGroup/delete-func-group-result-success.html
+++ b/src/main/resources/templates/eServices2/FuncGroup/delete-func-group-result-success.html
@@ -30,6 +30,9 @@
 
                 <div style="padding-top: 20px;">
                     <input class="SmallButtonStyle pointer" style="min-width: 80px;" type="button" th:value="${#messages.msg('umps.adminfunc.common.print')}" />
+                    <a class="DisableLinkUnderline" th:href="@{/e-Services-2/management/deleteFunctionGroup.do}">
+                        <input class="SmallButtonStyle pointer" type="button" th:value="${#messages.msg('umps.adminfunc.func.eservices2.management.deletefuncgroup')}" />
+                    </a>
                 </div>
 
             </div>
