--- a/src/main/resources/templates/eServices2/FuncGroup/update-func-group-edit-success.html
+++ b/src/main/resources/templates/eServices2/FuncGroup/update-func-group-edit-success.html
@@ -74,16 +74,9 @@
 
                 <div style="padding-top: 20px;">
                     <input class="SmallButtonStyle pointer" style="min-width: 80px;" type="button" th:value="${#messages.msg('umps.adminfunc.common.print')}" />
-                </div>
-
-                <div class="flex-container">
-                    <div style="flex: auto;"></div>
-                    <div style="padding: 15px;">
-                        <a class="DisableLinkUnderline" th:href="@{/e-Services-2/management//updateFunctionGroup.do}">
-                            <input class="ButtonStyle back-button pointer" type="button" th:value="${#messages.msg('umps.adminfunc.func.eservices2.management.updatefuncgroup')}" />
-                        </a>
-                    </div>
-
+                    <a class="DisableLinkUnderline" th:href="@{/e-Services-2/management/updateFunctionGroup.do}">
+                        <input class="SmallButtonStyle pointer" type="button" th:value="${#messages.msg('umps.adminfunc.func.eservices2.management.updatefuncgroup')}" />
+                    </a>
                 </div>
 
             </div>
