Added length validation for Function Group

--- a/src/main/resources/templates/eServices2/FuncGroup/create-func-group.html
+++ b/src/main/resources/templates/eServices2/FuncGroup/create-func-group.html
@@ -89,7 +89,7 @@
                                     <b><span th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.funcGroupId')}"></span></b>
                                 </div>
                                 <div class="flex-item-7">
-                                    <input type="text" name ="grpId" id ="grpId"/>
+                                    <input type="text" name ="grpId" id ="grpId" maxlength = "16"/>
                                 </div>
                             </div>
                             <div class="func-tab-padding-left func-tab-padding-right"><div class="RowSeparatorThin"></div></div>
@@ -98,7 +98,7 @@
                                     <b><span th:text="${#messages.msg('umps.adminfunc.func.eservices2.management.func.description')}"></span></b>
                                 </div>
                                 <div class="flex-item-7">
-                                    <input type="text" name ="groupDesc" id ="groupDesc"/>
+                                    <input type="text" name ="groupDesc" id ="groupDesc" maxlength="256"/>
                                 </div>
                             </div>
                         </div>
